# mrs_multirotor_simulator

./: .gitmodules  CMakeLists.txt
include/mrs_multirotor_simulator/: drone_controller_ros.h
src/: drone_controller_ros.cpp  multirotor_simulator.cpp
tmux/mrs_more_drones/: rviz.rviz  rviz_5_uavs.rviz  session.yml
tmux/mrs_more_drones/config/: simulator.yaml
tmux/mrs_one_drone/: rviz_1_ueds.rviz  session.yml
tmux/mrs_one_drone/config/: simulator.yaml
